plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'org.flywaydb.flyway' version '10.14.0'
}

group = 'MeokPlaylist'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(23)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
    implementation 'org.flywaydb:flyway-core:11.10.0'
	implementation 'org.flywaydb:flyway-mysql'

	implementation "com.google.api-client:google-api-client:2.5.0"
    implementation 'org.postgresql:postgresql:42.7.3'
	implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
	implementation 'com.google.http-client:google-http-client-jackson2:1.41.5'
	implementation 'com.nimbusds:nimbus-jose-jwt:9.37'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	//DB연결

    implementation 'mysql:mysql-connector-java:8.0.33'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation("org.springframework.boot:spring-boot-starter-webflux")
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation "com.auth0:java-jwt:4.4.0"
	implementation "software.amazon.awssdk:s3:2.20.91"

}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.register("copyPrivate", Copy) {
    from("submodule-data")
    include("*.yml")
    into("$buildDir/resources/main")
    //tml 파일 끌고 오는것
}

tasks.named("processResources") {
    dependsOn("copyPrivate")
}
